--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-USERNAME =sql6638516
-PASSWORD=k8vRNd1siZ
-DATABASE_NAME =sql6638516
-HOST_NAME = sql6.freesqldatabase.com
-DB_PORT = 3306
+USERNAME ="db_userName"
+PASSWORD="db_password"
+DATABASE_NAME ="db_name"
+HOST_NAME = "db_host_name"
+DB_PORT = "db_port"
